@@ -1,3 +1,8 @@
+2011-05-07  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-layout.lisp (update-layout-managed-children-position):
+	New function.
+
 2011-05-06  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/bindings-second-mode.lisp (set-default-second-keys):
